--- a/Proyects/Proyect1-MVP-Noticias/backend/package.json
+++ b/Proyects/Proyect1-MVP-Noticias/backend/package.json
@@ -21,7 +21,8 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.0",
-    "nodemailer": "^6.9.1"
+    "nodemailer": "^6.9.1",
+    "rss-parser": "^3.12.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.20"
